--- a/WebContent/Admin.jspx
+++ b/WebContent/Admin.jspx
@@ -146,50 +146,7 @@ body {
 			</div>
 		</table>
 
-		<table>
-			<tr>
-			<td>${popular}</td>
-				<td>
-					<div style="margin-left: 310px">
-						<button id="janBtn">Zip Code</button>
-						<!--The Modal  -->
-						<div id="jan" class="modal">
-							<div class="modal-content">
-								<span class="close"> </span>
-							</div>
-						
-						</div>
-					</div>
-				</td>
-			</tr>
-			<script>
-				// Get the modal
-				var modal = document.getElementById('jan');
-
-				// Get the button that opens the modal
-				var btn = document.getElementById('janBtn');
-
-				// Get the span element that closes the modal
-				var span = document.getElementsByClassName("close")[0];
-
-				// When the user clicks the button, open the modal 
-				btn.onclick = function() {
-					modal.style.display = "block";
-				}
-
-				// When the user clicks on span (x), close the modal
-				span.onclick = function() {
-					modal.style.display = "none";
-				}
-
-				// When the user clicks anywhere outside of the modal, close it
-				window.onclick = function(event) {
-					if (event.target == modal) {
-						modal.style.display = "none";
-					}
-				}
-			</script>
-		</table>
+		
 
 		<!--  	Trigger/Open The Modal -->
 		<!-- 	This is for the Modal that is divided based on each month -->
@@ -197,9 +154,9 @@ body {
 			<tr>
 				<td>
 					<div style="margin-left: 310px">
-						<button id="janBtn">January</button>
+						<button id="monBtn" name="mon">Month</button>
 						<!--The Modal  -->
-						<div id="jan" class="modal">
+						<div id="month" class="modal">
 							<div class="modal-content">
 								<span class="close"> </span>
 							</div>
@@ -207,12 +164,13 @@ body {
 					</div>
 				</td>
 			</tr>
+			<tr> <td> ${requestScope.topTen}</td></tr>
 			<script>
 				// Get the modal
-				var modal = document.getElementById('jan');
+				var modal = document.getElementById('month');
 
 				// Get the button that opens the modal
-				var btn = document.getElementById('janBtn');
+				var btn = document.getElementById('monBtn');
 
 				// Get the span element that closes the modal
 				var span = document.getElementsByClassName("close")[0];
@@ -238,9 +196,9 @@ body {
 			<tr>
 				<td>
 					<div style="margin-left: 310px">
-						<button id="febBtn">February</button>
+						<button id="zipBtn" name="zip">Zip</button>
 						<!--The Modal  -->
-						<div id="feb" class="modal">
+						<div id="zip" class="modal">
 							<div class="modal-content">
 								<span class="close"> </span>
 							</div>
@@ -248,422 +206,13 @@ body {
 					</div>
 				</td>
 			</tr>
+			<tr> <td>${requestScope.zipCode} </td></tr>
 			<script>
 				// Get the modal
-				var modal = document.getElementById('feb');
+				var modal = document.getElementById('zip');
 
 				// Get the button that opens the modal
-				var btn = document.getElementById('febBtn');
-
-				// Get the span element that closes the modal
-				var span = document.getElementsByClassName("close")[0];
-
-				// When the user clicks the button, open the modal 
-				btn.onclick = function() {
-					modal.style.display = "block";
-				}
-
-				// When the user clicks on span (x), close the modal
-				span.onclick = function() {
-					modal.style.display = "none";
-				}
-
-				// When the user clicks anywhere outside of the modal, close it
-				window.onclick = function(event) {
-					if (event.target == modal) {
-						modal.style.display = "none";
-					}
-				}
-			</script>
-
-			<tr>
-				<td>
-					<div style="margin-left: 310px">
-						<button id="marBtn">March</button>
-						<!--The Modal  -->
-						<div id="mar" class="modal">
-							<div class="modal-content">
-								<span class="close"> </span>
-							</div>
-						</div>
-					</div>
-				</td>
-			</tr>
-			<script>
-				// Get the modal
-				var modal = document.getElementById('mar');
-
-				// Get the button that opens the modal
-				var btn = document.getElementById('marBtn');
-
-				// Get the span element that closes the modal
-				var span = document.getElementsByClassName("close")[0];
-
-				// When the user clicks the button, open the modal 
-				btn.onclick = function() {
-					modal.style.display = "block";
-				}
-
-				// When the user clicks on span (x), close the modal
-				span.onclick = function() {
-					modal.style.display = "none";
-				}
-
-				// When the user clicks anywhere outside of the modal, close it
-				window.onclick = function(event) {
-					if (event.target == modal) {
-						modal.style.display = "none";
-					}
-				}
-			</script>
-
-			<tr>
-				<td>
-					<div style="margin-left: 310px">
-						<button id="aprBtn">April</button>
-						<!--The Modal  -->
-						<div id="apr" class="modal">
-							<div class="modal-content">
-								<span class="close"> </span>
-							</div>
-						</div>
-					</div>
-				</td>
-			</tr>
-			<script>
-				// Get the modal
-				var modal = document.getElementById('apr');
-
-				// Get the button that opens the modal
-				var btn = document.getElementById('aprBtn');
-
-				// Get the span element that closes the modal
-				var span = document.getElementsByClassName("close")[0];
-
-				// When the user clicks the button, open the modal 
-				btn.onclick = function() {
-					modal.style.display = "block";
-				}
-
-				// When the user clicks on span (x), close the modal
-				span.onclick = function() {
-					modal.style.display = "none";
-				}
-
-				// When the user clicks anywhere outside of the modal, close it
-				window.onclick = function(event) {
-					if (event.target == modal) {
-						modal.style.display = "none";
-					}
-				}
-			</script>
-
-			<tr>
-				<td>
-					<div style="margin-left: 310px">
-						<button id="mayBtn">May</button>
-						<!--The Modal  -->
-						<div id="may" class="modal">
-							<div class="modal-content">
-								<span class="close"> </span>
-							</div>
-						</div>
-					</div>
-				</td>
-			</tr>
-			<script>
-				// Get the modal
-				var modal = document.getElementById('may');
-
-				// Get the button that opens the modal
-				var btn = document.getElementById('mayBtn');
-
-				// Get the span element that closes the modal
-				var span = document.getElementsByClassName("close")[0];
-
-				// When the user clicks the button, open the modal 
-				btn.onclick = function() {
-					modal.style.display = "block";
-				}
-
-				// When the user clicks on span (x), close the modal
-				span.onclick = function() {
-					modal.style.display = "none";
-				}
-
-				// When the user clicks anywhere outside of the modal, close it
-				window.onclick = function(event) {
-					if (event.target == modal) {
-						modal.style.display = "none";
-					}
-				}
-			</script>
-
-			<tr>
-				<td>
-					<div style="margin-left: 310px">
-						<button id="junBtn">June</button>
-						<!--The Modal  -->
-						<div id="jun" class="modal">
-							<div class="modal-content">
-								<span class="close"> </span>
-							</div>
-						</div>
-					</div>
-				</td>
-			</tr>
-			<script>
-				// Get the modal
-				var modal = document.getElementById('jun');
-
-				// Get the button that opens the modal
-				var btn = document.getElementById('junBtn');
-
-				// Get the span element that closes the modal
-				var span = document.getElementsByClassName("close")[0];
-
-				// When the user clicks the button, open the modal 
-				btn.onclick = function() {
-					modal.style.display = "block";
-				}
-
-				// When the user clicks on span (x), close the modal
-				span.onclick = function() {
-					modal.style.display = "none";
-				}
-
-				// When the user clicks anywhere outside of the modal, close it
-				window.onclick = function(event) {
-					if (event.target == modal) {
-						modal.style.display = "none";
-					}
-				}
-			</script>
-
-			<tr>
-				<td>
-					<div style="margin-left: 310px">
-						<button id="julBtn">July</button>
-						<!--The Modal  -->
-						<div id="jul" class="modal">
-							<div class="modal-content">
-								<span class="close"> </span>
-							</div>
-						</div>
-					</div>
-				</td>
-			</tr>
-			<script>
-				// Get the modal
-				var modal = document.getElementById('jul');
-
-				// Get the button that opens the modal
-				var btn = document.getElementById('julBtn');
-
-				// Get the span element that closes the modal
-				var span = document.getElementsByClassName("close")[0];
-
-				// When the user clicks the button, open the modal 
-				btn.onclick = function() {
-					modal.style.display = "block";
-				}
-
-				// When the user clicks on span (x), close the modal
-				span.onclick = function() {
-					modal.style.display = "none";
-				}
-
-				// When the user clicks anywhere outside of the modal, close it
-				window.onclick = function(event) {
-					if (event.target == modal) {
-						modal.style.display = "none";
-					}
-				}
-			</script>
-
-			<tr>
-				<td>
-					<div style="margin-left: 310px">
-						<button id="augBtn">August</button>
-						<!--The Modal  -->
-						<div id="aug" class="modal">
-							<div class="modal-content">
-								<span class="close"> </span>
-							</div>
-						</div>
-					</div>
-				</td>
-			</tr>
-			<script>
-				// Get the modal
-				var modal = document.getElementById('aug');
-
-				// Get the button that opens the modal
-				var btn = document.getElementById('augBtn');
-
-				// Get the span element that closes the modal
-				var span = document.getElementsByClassName("close")[0];
-
-				// When the user clicks the button, open the modal 
-				btn.onclick = function() {
-					modal.style.display = "block";
-				}
-
-				// When the user clicks on span (x), close the modal
-				span.onclick = function() {
-					modal.style.display = "none";
-				}
-
-				// When the user clicks anywhere outside of the modal, close it
-				window.onclick = function(event) {
-					if (event.target == modal) {
-						modal.style.display = "none";
-					}
-				}
-			</script>
-
-			<tr>
-				<td>
-					<div style="margin-left: 310px">
-						<button id="sepBtn">September</button>
-						<!--The Modal  -->
-						<div id="sep" class="modal">
-							<div class="modal-content">
-								<span class="close"> </span>
-							</div>
-						</div>
-					</div>
-				</td>
-			</tr>
-			<script>
-				// Get the modal
-				var modal = document.getElementById('sep');
-
-				// Get the button that opens the modal
-				var btn = document.getElementById('sepBtn');
-
-				// Get the span element that closes the modal
-				var span = document.getElementsByClassName("close")[0];
-
-				// When the user clicks the button, open the modal 
-				btn.onclick = function() {
-					modal.style.display = "block";
-				}
-
-				// When the user clicks on span (x), close the modal
-				span.onclick = function() {
-					modal.style.display = "none";
-				}
-
-				// When the user clicks anywhere outside of the modal, close it
-				window.onclick = function(event) {
-					if (event.target == modal) {
-						modal.style.display = "none";
-					}
-				}
-			</script>
-
-			<tr>
-				<td>
-					<div style="margin-left: 310px">
-						<button id="octBtn">October</button>
-						<!--The Modal  -->
-						<div id="oct" class="modal">
-							<div class="modal-content">
-								<span class="close"> </span>
-							</div>
-						</div>
-					</div>
-				</td>
-			</tr>
-			<script>
-				// Get the modal
-				var modal = document.getElementById('oct');
-
-				// Get the button that opens the modal
-				var btn = document.getElementById('octBtn');
-
-				// Get the span element that closes the modal
-				var span = document.getElementsByClassName("close")[0];
-
-				// When the user clicks the button, open the modal 
-				btn.onclick = function() {
-					modal.style.display = "block";
-				}
-
-				// When the user clicks on span (x), close the modal
-				span.onclick = function() {
-					modal.style.display = "none";
-				}
-
-				// When the user clicks anywhere outside of the modal, close it
-				window.onclick = function(event) {
-					if (event.target == modal) {
-						modal.style.display = "none";
-					}
-				}
-			</script>
-
-			<tr>
-				<td>
-					<div style="margin-left: 310px">
-						<button id="novBtn">November</button>
-						<!--The Modal  -->
-						<div id="nov" class="modal">
-							<div class="modal-content">
-								<span class="close"> </span>
-							</div>
-						</div>
-					</div>
-				</td>
-			</tr>
-			<script>
-				// Get the modal
-				var modal = document.getElementById('nov');
-
-				// Get the button that opens the modal
-				var btn = document.getElementById('novBtn');
-
-				// Get the span element that closes the modal
-				var span = document.getElementsByClassName("close")[0];
-
-				// When the user clicks the button, open the modal 
-				btn.onclick = function() {
-					modal.style.display = "block";
-				}
-
-				// When the user clicks on span (x), close the modal
-				span.onclick = function() {
-					modal.style.display = "none";
-				}
-
-				// When the user clicks anywhere outside of the modal, close it
-				window.onclick = function(event) {
-					if (event.target == modal) {
-						modal.style.display = "none";
-					}
-				}
-			</script>
-			<tr>
-				<td>
-					<div style="margin-left: 310px">
-						<button id="decBtn">December</button>
-						<!--The Modal  -->
-						<div id="dec" class="modal">
-							<div class="modal-content">
-								<span class="close"> </span>
-							</div>
-						</div>
-					</div>
-				</td>
-			</tr>
-
-			<script>
-				// Get the modal
-				var modal = document.getElementById('dec');
-
-				// Get the button that opens the modal
-				var btn = document.getElementById('decBtn');
+				var btn = document.getElementById('zipBtn');
 
 				// Get the span element that closes the modal
 				var span = document.getElementsByClassName("close")[0];
@@ -686,10 +235,7 @@ body {
 				}
 			</script>
 		</table>
-
-
-
-	</form>
+</form>
 </body>
 
 
